transmission/transmission-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f sonarr.yaml -f transmission.yaml convert
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: longhorn
  creationTimestamp: null
  labels:
    io.kompose.service: transmission
  name: transmission
spec:
  replicas: 2
  selector:
    matchLabels:
      io.kompose.service: transmission
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f sonarr.yaml -f transmission.yaml convert
        kompose.service.type: loadbalancer
        kompose.version: 1.28.0 (c4137012e)
        kompose.volume.storage-class-name: longhorn
      creationTimestamp: null
      labels:
        io.kompose.network/komposes-default: "true"
        io.kompose.service: transmission
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: lscr.io/linuxserver/transmission:latest
          name: transmission
          ports:
            - containerPort: 9091
            - containerPort: 51413
            - containerPort: 51413
              protocol: UDP
          resources: {}
          volumeMounts:
            - mountPath: /config
              name: transmission
            - mountPath: /downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: transmission
          persistentVolumeClaim:
            claimName: transmission
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
status: {}
