transmission/transmission-udp-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: autopirate
  annotations:
    kompose.cmd: C:\ProgramData\chocolatey\lib\kubernetes-kompose\tools\kompose.exe -f sonarr.yaml -f transmission.yaml convert
    kompose.service.type: loadbalancer
    kompose.version: 1.28.0 (c4137012e)
    kompose.volume.storage-class-name: longhorn
    metallb.universe.tf/allow-shared-ip: "transmission"
  creationTimestamp: null
  labels:
    io.kompose.service: transmission-udp
  name: transmission-udp
spec:
  loadBalancerIP: 192.168.1.199
  ports:
    - name: "51413"
      port: 51413
      protocol: UDP
      targetPort: 51413
  selector:
    io.kompose.service: transmission
  type: LoadBalancer
status:
  loadBalancer: {}
